switched back to space grotesk for the content, kept the monospace for the header to avoir spacing issues

--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -5,6 +5,7 @@
     
     position: fixed;
 
+    font-family: "Roboto Mono", monospace;
     color: var(--color-main);
     background-color: var(--color-bg);
     transition: box-shadow calc(var(--transition-time) / 2),
