--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet');
 
 body {
 	margin: 0;
 	background-color: var(--color-bg);
 	color: var(--color-main);
 
-	font-family: "Roboto Mono", monospace;
+	font-family: "Space Grotesk", sans-serif;
 
 	line-height: 1.5;
 }
